--- a/.github/ISSUE_TEMPLATE/indigo-data-request.yaml
+++ b/.github/ISSUE_TEMPLATE/indigo-data-request.yaml
@@ -37,8 +37,8 @@ body:
 - type: textarea
   attributes:
     label: How will you use this data/feature?
-    description: Technical and operational use for the feature. 
-      examples: We will query the metric for each of our active customers every 5 minutes using snowflake sdk and send a notification to their browser. This will increase customer time on our site and help upsell premium service X.
+    description: Technical and operational use for the feature. |
+      Example -> We will query the metric for each of our active customers every 5 minutes using snowflake sdk and send a notification to their browser. This will increase customer time on our site and help upsell premium service X.
   validations:
     required: false
 - type: textarea
@@ -75,6 +75,6 @@ body:
     description: |
       Add any other context, references, or screenshots about the feature request here.
   
-      Tip: You can attach images or log files by clicking this area to highlight it and then dragging files in.
+      Tip -> You can attach images or log files by clicking this area to highlight it and then dragging files in.
   validations:
     required: false
